test/visibility/rename/renameExceptInvalid.good
renameExceptInvalid.chpl:8: error: cannot rename in 'except' list
